# ramp-up

./: .appveyor.yml  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: utils.cmake
src/: functions.cpp  functions.hpp  main.cpp
